[gd_scene load_steps=10 format=3 uid="uid://c4887y6unr36"]

[ext_resource type="Texture2D" uid="uid://bylp5gee4jntj" path="res://graphics/player/player.png" id="1_8mh3n"]
[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_88btm"]
[ext_resource type="Script" path="res://scenes/player/FpsLabel.gd" id="3_40gr6"]
[ext_resource type="Script" path="res://scenes/player/VsyncToggle.gd" id="4_8nres"]
[ext_resource type="Texture2D" uid="uid://damj50rh7ocnm" path="res://graphics/decals/white.png" id="5_t1n33"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5riln"]
radius = 63.0079

[sub_resource type="Gradient" id="Gradient_rw6sv"]
colors = PackedColorArray(0.117647, 1, 1, 0.572549, 0.47451, 1, 1, 0.396078)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_b3ose"]
gradient = SubResource("Gradient_rw6sv")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_i5tkw"]
particle_flag_disable_z = true
spread = 20.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 1200.0
initial_velocity_max = 1500.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.3
scale_max = 0.8
color = Color(0.117647, 1, 1, 0.572549)
color_ramp = SubResource("GradientTexture1D_b3ose")

[node name="Player" type="CharacterBody2D"]
collision_mask = 31
script = ExtResource("1_88btm")

[node name="PlayerSprite" type="Sprite2D" parent="."]
position = Vector2(40, 1)
rotation = 1.5708
texture = ExtResource("1_8mh3n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5riln")

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GrenadeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.6, 0.6)
process_callback = 0
position_smoothing_enabled = true

[node name="ProjectilesStartPositions" type="Node2D" parent="."]

[node name="Pos1" type="Marker2D" parent="ProjectilesStartPositions"]
position = Vector2(135, 20)

[node name="Pos2" type="Marker2D" parent="ProjectilesStartPositions"]
position = Vector2(132, 13)

[node name="Pos3" type="Marker2D" parent="ProjectilesStartPositions"]
position = Vector2(132, 28)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="FpsLabel" type="Label" parent="CanvasLayer"]
offset_left = 1099.0
offset_top = 4.0
offset_right = 1164.0
offset_bottom = 30.0
size_flags_horizontal = 4
text = "FPS: "
script = ExtResource("3_40gr6")
metadata/_edit_use_anchors_ = true

[node name="VsyncToggle" type="CheckButton" parent="CanvasLayer"]
offset_left = 1175.0
offset_top = 1.0
offset_right = 1274.0
offset_bottom = 32.0
size_flags_horizontal = 4
focus_mode = 0
button_pressed = true
text = "VSYNC"
script = ExtResource("4_8nres")
metadata/_edit_use_anchors_ = true

[node name="LaserShootingParticles" type="GPUParticles2D" parent="."]
position = Vector2(134, 20)
scale = Vector2(1.09725, 1.0732)
emitting = false
amount = 4
process_material = SubResource("ParticleProcessMaterial_i5tkw")
texture = ExtResource("5_t1n33")
lifetime = 0.2
one_shot = true

[connection signal="timeout" from="LaserTimer" to="." method="_on_laser_timer_timeout"]
[connection signal="timeout" from="GrenadeTimer" to="." method="_on_grenade_timer_timeout"]
